# nooryx

./: .gitignore
backend/: alembic.ini  pyproject.toml
backend/app/: logging.ini  main.py  models.py  schemas.py
backend/app/alembic/: env.py
backend/app/bootstrap/: admin.py
backend/app/core/: config.py  db.py  logger_config.py  rate_limiter.py  redis.py  security.py  tenancy.py
backend/app/middleware/: correlation.py  csrf.py  rate_limit.py
backend/app/routers/: access_grants.py  actions.py  admin.py  alerts.py  barcodes.py  billing.py  feedback.py  inventory.py  reports.py  search.py  settings.py  team.py  transactions.py  valuation.py  waitlist.py
backend/app/schemas/: actions.py  alerts.py  common.py  feedback.py  inventory.py  report.py  search.py  settings.py  shopify.py  team.py  transaction.py  valuation.py
backend/app/seeds/: demo_org_seed.sql  extract_seed_data.py  generate_demo_data.py  seed_demo_org.py  space_txns.py
backend/app/services/: alert_service.py  barcodes.py  cost_tracker.py  currency_service.py  exceptions.py  metrics.py  movers.py  search.py  settings.py  state_updater.py  stock_counts.py  trends.py  txn.py
backend/app/templates/: access_grant_email.html  invitation_email.html
backend/tests/: conftest.py  test_alert_service.py  test_barcodes.py  test_cost_tracker.py  test_currency_service.py  test_movers_service.py  test_trends_service.py  test_txn_service.py
backend/tests/integration/: conftest.py  test_actions_router.py  test_actions_router_deep.py  test_actions_tenancy.py  test_inventory_router.py  test_login_router.py  (+6 more)
(+377 files in other folders)
