[project]
name = "nooryx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "fastapi>=0.116.2",
    "fastapi-pagination>=0.14.2",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
    "uuid6>=2025.0.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.scripts]
test = "pytest"
